--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="innerContainer"></div>
     <div class="pageCover">
       <div class="cutButton">
-        <img id="cut" src="/images/XcutButton.png" alt="" />
+        <img id="cut" src="/XcutButton.png" alt="" />
       </div>
       <div class="page">
         <u><h1 class="dishName"></h1></u>
